# deep-analysis-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.claude/: review-config.json
.github/workflows/: ci.yml  release.yml
.pka/updates/: current.md
docs/: auth-flow.md  installer-architecture.md  release-process.md
docs/diagrams/: agent-lifecycle.excalidraw  pyproject.toml  render.py  render_template.html
icons/: README.md  generate_app_ico.py  generate_icons.py
installer/: README.md
src/deep_analysis_agent/: __init__.py  __main__.py  about_window.py  auth.py  card_data_source.py  config.py  dedup.py  first_run.py  instance_lock.py  log_viewer.py  logging.py  main.py  paths.py  settings_window.py  shipper.py  tray.py  updater.py  watcher.py
tests/: test_auth.py  test_bulk_sync.py  test_card_data_source.py  test_config.py  test_config_token.py  test_dedup.py  test_log_viewer.py  test_main_flow.py  test_settings_window.py  test_shipper.py  test_squirrel_hooks.py  test_startup_banner.py  test_tray_cadence.py  test_updater.py  test_version_detection.py  test_watcher.py
