[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-analysis-agent"
version = "0.4.3"
description = "Deep Analysis agent — Windows tray client for MTGO match analytics"
license = { text = "MIT" }
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pystray>=0.19",
    "watchdog>=4.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "Pillow>=10.0",
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
build = [
    "pyinstaller>=6.6",
]

[project.scripts]
deep-analysis-agent = "deep_analysis_agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pystray", "win32event", "win32api", "winerror", "win32crypt"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# Hardened python-semantic-release config block.
# Append to your project's pyproject.toml. The installer does
# this automatically when `[tool.semantic_release]` is absent.
#
# Why this shape exists: PSR 10.x's default `allow_zero_version`
# is False, which auto-graduates 0.x → 1.0.0 on first managed
# release run regardless of commit type. The 2026-04-26
# deep-analysis-server install hit exactly that and cut a stray
# v1.0.0 from a `chore:` commit. This config locks the project
# into 0.x progression and gives the conventional commit parser
# explicit no-op behavior for unmatched types.

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
major_on_zero = false
allow_zero_version = true
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
build_command = ""

[tool.semantic_release.branches.main]
match = "^(main)$"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "ci", "docs", "refactor", "style", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.publish]
upload_to_vcs_release = false
